starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__runtime_requires_runtime_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn pure_fn() -> i64 {\n    42\n}\n\nfn main() {\n    let x = runtime pure_fn();\n}\n"
---
E0038 (https://starstream.nightstream.dev/errors/E0038)

  x `runtime` keyword not required to call normal function `pure_fn`
   ,-[test.star:6:21]
 5 | fn main() {
 6 |     let x = runtime pure_fn();
   :                     ^^^^^^^
 7 | }
   `----
