starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__runtime_without_keyword_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nimport { blockHeight } from starstream:std/cardano;\n\nfn main() {\n    let x = blockHeight();\n}\n"
---
E0039 (https://starstream.nightstream.dev/errors/E0039)

  x `runtime` keyword required to call `runtime fn blockHeight`
   ,-[test.star:4:13]
 3 | fn main() {
 4 |     let x = blockHeight();
   :             ^^^^^^^^^^^
 5 | }
   `----
