starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__storage_assignment_from_storage_expression_without_disclose_ok.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nutxo Counter {\n    storage {\n        let mut counter: i64;\n    }\n\n    main fn update() {\n        counter = counter + 1;\n    }\n}\n"
---
T-Utxo: Counter => 
  T-Fn: update => ()
    T-Assign: {counter: i64, update: fn() -> () [update]} ⊢ counter = counter + 1; ⇒ i64
      T-Bin-Add: {counter: i64, update: fn() -> () [update]} ⊢ counter + 1 ⇒ i64
        T-Var: {counter: i64, update: fn() -> () [update]} ⊢ counter ⇒ i64
        T-Int: {counter: i64, update: fn() -> () [update]} ⊢ 1 ⇒ i64
        Unify-Var: i64 ~ i64 => {i64/t3}
      Unify-Const: i64 ~ i64 => {}
