starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__struct_field_order_preserved.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nstruct User {\n    name: i64,\n    age: i64,\n    email: i64,\n}\n\nstruct ZOrder {\n    z: i64,\n    a: i64,\n}\n\nfn test() {\n    let u = User {\n        name: 1,\n        age: 2,\n        email: 3,\n    };\n    let z = ZOrder {\n        z: 1,\n        a: 2,\n    };\n}\n"
---
T-Fn: test => ()
  T-Let: {test: fn() -> () [test]} ⊢ let u = User {
    name: 1,
    age: 2,
    email: 3,
}; ⇒ User
    T-StructLit: {test: fn() -> () [test]} ⊢ User {
    name: 1,
    age: 2,
    email: 3,
} ⇒ User
      T-Int: {test: fn() -> () [test]} ⊢ 1 ⇒ i64
      Unify-Var: i64 ~ i64 => {i64/t3}
      T-Int: {test: fn() -> () [test]} ⊢ 2 ⇒ i64
      Unify-Var: i64 ~ i64 => {i64/t4}
      T-Int: {test: fn() -> () [test]} ⊢ 3 ⇒ i64
      Unify-Var: i64 ~ i64 => {i64/t5}
  T-Let: {test: fn() -> () [test], u: User} ⊢ let z = ZOrder {
    z: 1,
    a: 2,
}; ⇒ ZOrder
    T-StructLit: {test: fn() -> () [test], u: User} ⊢ ZOrder {
    z: 1,
    a: 2,
} ⇒ ZOrder
      T-Int: {test: fn() -> () [test], u: User} ⊢ 1 ⇒ i64
      Unify-Var: i64 ~ i64 => {i64/t6}
      T-Int: {test: fn() -> () [test], u: User} ⊢ 2 ⇒ i64
      Unify-Var: i64 ~ i64 => {i64/t7}
