starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__struct_literal_field_type_mismatch_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nstruct Point {\n    x: i64,\n}\n\nfn test() {\n    Point {\n        x: true,\n    };\n}\n"
---
]8;;https://starstream.nightstream.dev/errors/E0008\E0008 (link)]8;;\

  x expected type `i64`, found `bool`
   ,-[test.star:7:12]
 6 |     Point {
 7 |         x: true,
   :         |  ^^|^
   :         |    `-- has type `bool`
   :         `-- has type `i64`
 8 |     };
   `----
